K8S-manifest-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: usermanagement-ingress
  namespace: usermanagement

spec:
  ingressClassName: nginx

  rules:
    - host: usermanagement.local

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend
                port:
                  number: 80

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80
